edited markup, start gulp with npm run, this.timeSend

--- a/app/index.html
+++ b/app/index.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-    <!-- <section class="startpage">
+<!--     <section class="startpage">
         <div class="startpage_bg"></div>
         <div class="startpage__header">
             <div class="startpage__header-bg"></div>
             <h1>Международный
                 <br> Клинический центр</h1>
-        </div>
+        </div
         <div class="startpage__info">
             <p>Примите участие в БЛАГОТВОРИТЕЛЬНОЙ акции.</p>
             <p>
